Updated gitignore for .code-workspace

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 solutions 
 starter-code
 
+# Mac specific
 .DS_Store
+
+# Visual Code Studio workspace file
+.code-workspace
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
